cf-env/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cf-env
spec:
  selector:
    matchLabels:
      app: cf-env
  replicas: 1
  template:
    spec:
      containers:
      - name: cf-env
        image: jamesclonk/cf-env:89d20c44e3d6b1a4e0c0502e9d1f5bc908e81264
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "32Mi"
            cpu: "5m"
          limits:
            memory: "64Mi"
            cpu: "50m"
        readinessProbe:
          httpGet:
            path: /
            port: 8080
