cf-env/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: cf-env
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: cf-env
