cf-env/base/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cf-env
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - cf-env.${KUBE_DOMAIN}
    secretName: cf-env-tls
  rules:
  - host: cf-env.${KUBE_DOMAIN}
    http:
      paths:
      - backend:
          serviceName: cf-env
          servicePort: 80
